[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/Button.gd" type="Script" id=2]
[ext_resource path="res://entitysheet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 4.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13, 3.5 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CogSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PressSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "press"
tracks/0/type = "value"
tracks/0/path = NodePath("CogSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PressSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 6 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 6 )

[node name="Button" type="Node2D"]
script = ExtResource( 2 )

[node name="PressSprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 48, 32, 16 )

[node name="CogSprite" type="Sprite" parent="."]
position = Vector2( 16, -9 )
texture = ExtResource( 3 )
offset = Vector2( 0.5, -0.5 )
region_enabled = true
region_rect = Rect2( 128, 32, 16, 16 )

[node name="BaseSprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 64, 32, 16 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -4.5 )
shape = SubResource( 3 )

[node name="PressArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressArea"]
position = Vector2( 0, -12.5 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/press = SubResource( 6 )

[node name="MissingCogParticles" type="CPUParticles2D" parent="."]
position = Vector2( 14, -7 )
amount = 3
lifetime = 0.6
explosiveness = 0.59
lifetime_randomness = 0.49
emission_shape = 2
emission_rect_extents = Vector2( 3, 1 )
direction = Vector2( 1, -0.5 )
spread = 81.33
gravity = Vector2( 0, 32 )
initial_velocity = 59.64
damping = 30.28

[node name="FixArea" type="Area2D" parent="."]
position = Vector2( 16, -10 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FixArea"]
shape = SubResource( 7 )
